--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:onClick="longruntime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Long Time Runing"
+        />
+
 </LinearLayout>
